objects/Ucast__c/fields/Typ_opatreni__c.field-meta.xml
<CustomField>
    <fullName>Typ_opatreni__c</fullName>
    <label>Typ opatření</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrativní budovy</fullName>
            </value>
            <value>
                <fullName>Biodiverzita</fullName>
            </value>
            <value>
                <fullName>Čištění a recyklace vody</fullName>
            </value>
            <value>
                <fullName>Eroze půdy</fullName>
            </value>
            <value>
                <fullName>Extrémní vítr</fullName>
            </value>
            <value>
                <fullName>Městská zeleň</fullName>
            </value>
            <value>
                <fullName>Nedostatek vody a sucho</fullName>
            </value>
            <value>
                <fullName>Povodně a přívalové srážky</fullName>
            </value>
            <value>
                <fullName>Protipovodňové opatření</fullName>
            </value>
            <value>
                <fullName>Revitalizace vodních prvku</fullName>
            </value>
            <value>
                <fullName>Rodinné a bytové domy</fullName>
            </value>
            <value>
                <fullName>Stínění</fullName>
            </value>
            <value>
                <fullName>Úspory energie</fullName>
            </value>
            <value>
                <fullName>Veřejné budovy</fullName>
            </value>
            <value>
                <fullName>Vlny horka a tepelný ostrov</fullName>
            </value>
            <value>
                <fullName>Výrobní areál</fullName>
            </value>
            <value>
                <fullName>Vytápění</fullName>
            </value>
            <value>
                <fullName>Využití dešťové vody</fullName>
            </value>
            <value>
                <fullName>Zelená energie</fullName>
            </value>
            <value>
                <fullName>Zelená střecha</fullName>
            </value>
            <value>
                <fullName>Zeleň v krajině</fullName>
            </value>
            <value>
                <fullName>Zemědělská krajina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>