objects/Ucast__c/fields/Typ_podlicence__c.field-meta.xml
<CustomField>
    <fullName>Typ_podlicence__c</fullName>
    <label>Typ podlicence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>