objects/Ucast__c/fields/Typ_pron_jmu__c.field-meta.xml
<CustomField>
    <fullName>Typ_pron_jmu__c</fullName>
    <label>Typ pronájmu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Firemní</fullName>
            </value>
            <value>
                <fullName>Individualni</fullName>
                <label>Individuální</label>
            </value>
            <value>
                <fullName>Svatba</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Kurz</fullName>
            </value>
            <value>
                <fullName>Školní</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>