objects/Ucast__c/fields/Typ_ucastnika__c.field-meta.xml
<CustomField>
    <fullName>Typ_ucastnika__c</fullName>
    <label>Typ účastníka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sázející</fullName>
            </value>
            <value>
                <fullName>Panelista</fullName>
            </value>
            <value>
                <fullName>Fotograf</fullName>
            </value>
            <value>
                <fullName>Odborný dozor</fullName>
            </value>
            <value>
                <fullName>Novinář</fullName>
            </value>
            <value>
                <fullName>Škola</fullName>
            </value>
            <value>
                <fullName>Individuál</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>