objects/Ucast__c/fields/Ucast_na_eventu__c.field-meta.xml
<CustomField>
    <fullName>Ucast_na_eventu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Účast na eventu</description>
    <label>Účast na eventu</label>
    <referenceTo>Eventy__c</referenceTo>
    <relationshipLabel>Účasti</relationshipLabel>
    <relationshipName>asti</relationshipName>
    <type>Lookup</type>
</CustomField>