objects/Ucast__c/fields/Uhrazene_smlouvy__c.field-meta.xml
<CustomField>
    <fullName>Uhrazene_smlouvy__c</fullName>
    <label>Uhrazené smlouvy</label>
    <summarizedField>Smlouva__c.Uhrazena_castka__c</summarizedField>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>