objects/Ucast__c/fields/Uroven_spoluprace__c.field-meta.xml
<CustomField>
    <fullName>Uroven_spoluprace__c</fullName>
    <label>Stav jednání</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Příležitost/Nekontaktováno</fullName>
                <default>true</default>
                <label>Příležitost/Nekontaktováno</label>
            </value>
            <value>
                <fullName>Žádost o schůzku</fullName>
            </value>
            <value>
                <fullName>Osobní schůzka</fullName>
            </value>
            <value>
                <fullName>Nabídka</fullName>
            </value>
            <value>
                <fullName>Objednávka</fullName>
            </value>
            <value>
                <fullName>Realizováno</fullName>
            </value>
            <value>
                <fullName>Zrušeno</fullName>
            </value>
            <value>
                <fullName>Ztraceno</fullName>
            </value>
            <value>
                <fullName>Příležitost</fullName>
            </value>
            <value>
                <fullName>Zájem</fullName>
            </value>
            <value>
                <fullName>Zamítnuto</fullName>
            </value>
            <value>
                <fullName>Ztraceno (Covid)</fullName>
            </value>
            <value>
                <fullName>Zrušeno (Covid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>