objects/Ucast__c/fields/Variabilni_symbol__c.field-meta.xml
<CustomField>
    <fullName>Variabilni_symbol__c</fullName>
    <formula>&quot;6&quot;+TEXT(VALUE(Name))+&quot;XXXX&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variabilní symbol</label>
    <type>Text</type>
</CustomField>