objects/Ucast__c/fields/Vysledek_posledni_kontroly__c.field-meta.xml
<CustomField>
    <fullName>Vysledek_posledni_kontroly__c</fullName>
    <formula>IF (RIGHT(TEXT( result_aggregator_callback__c ), 3) == &quot;001&quot;, &quot;OK&quot;, &quot;Negativní&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Výsledek poslední kontroly</label>
    <type>Text</type>
</CustomField>