objects/Ucast__c/fields/Web_objektu__c.field-meta.xml
<CustomField>
    <fullName>Web_objektu__c</fullName>
    <formula>HYPERLINK(&quot;http://www.cyklistevitani.cz/cyklistevitani/cykliste-vitani-detail.php3?id=&quot; + TEXT(ID_Objektu__c), &quot;Cyklisté vítáni - &quot; + TEXT(ID_Objektu__c) + &quot; - &quot; + Nazev_objektu__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail na Cyklisté vítáni</label>
    <type>Text</type>
</CustomField>