objects/Ucast__c/fields/Zaplacene_obdobi_smlouvy_o_certifikaci__c.field-meta.xml
<CustomField>
    <fullName>Zaplacene_obdobi_smlouvy_o_certifikaci__c</fullName>
    <label>Konec zaplaceného období certifikace</label>
    <summarizedField>Smlouva__c.Obdobi_zaplaceno_do__c</summarizedField>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>