objects/Ucast__c/fields/Zdroj__c.field-meta.xml
<CustomField>
    <fullName>Zdroj__c</fullName>
    <label>Zdroj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Běžná účast na programu</fullName>
            </value>
            <value>
                <fullName>E-mailing</fullName>
            </value>
            <value>
                <fullName>Socialni_site</fullName>
                <label>Sociální sítě</label>
            </value>
            <value>
                <fullName>Konference/Seminář</fullName>
            </value>
            <value>
                <fullName>Našli si nás sami</fullName>
            </value>
            <value>
                <fullName>Reklamní kampaň</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Doporučení od známého</fullName>
            </value>
            <value>
                <fullName>Osobní kontakt</fullName>
            </value>
            <value>
                <fullName>Nezjištěno</fullName>
            </value>
            <value>
                <fullName>Historicky_kontakt</fullName>
                <label>Historický kontakt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>