objects/Ucast__c/fields/Zdroj_kontaktu__c.field-meta.xml
<CustomField>
    <fullName>Zdroj_kontaktu__c</fullName>
    <label>Zdroj kontaktu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rádce</fullName>
            </value>
            <value>
                <fullName>Poradna (formulář)</fullName>
            </value>
            <value>
                <fullName>Poradna (mail)</fullName>
            </value>
            <value>
                <fullName>Jiné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>