objects/Ucast__c/fields/Zpracovatel__c.field-meta.xml
<CustomField>
    <fullName>Zpracovatel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zpracovatel</label>
    <referenceTo>Pracovnik__c</referenceTo>
    <relationshipLabel>Účasti (Zpracovatel)</relationshipLabel>
    <relationshipName>asti1</relationshipName>
    <type>Lookup</type>
</CustomField>