objects/Ucast__c/recordTypes/Adaptacni_strategie.recordType-meta.xml
<RecordType>
    <fullName>Adaptacni_strategie</fullName>
    <active>true</active>
    <description>Zájemci o adaptační strategie - obce</description>
    <label>Adaptační strategie</label>
</RecordType>