objects/Ucast__c/recordTypes/Certifikace.recordType-meta.xml
<RecordType>
    <fullName>Certifikace</fullName>
    <active>true</active>
    <label>Certifikace objektu</label>
</RecordType>