objects/Ucast__c/recordTypes/Clenstvi.recordType-meta.xml
<RecordType>
    <fullName>Clenstvi</fullName>
    <active>true</active>
    <label>Členství</label>
</RecordType>