objects/Ucast__c/recordTypes/Darcovstvi.recordType-meta.xml
<RecordType>
    <fullName>Darcovstvi</fullName>
    <active>true</active>
    <label>Dárcovství</label>
</RecordType>