objects/Ucast__c/recordTypes/Dobrovolnictv.recordType-meta.xml
<RecordType>
    <fullName>Dobrovolnictv</fullName>
    <active>true</active>
    <label>Dobrovolnictví</label>
</RecordType>