objects/Ucast__c/recordTypes/Dodavani_sluzeb.recordType-meta.xml
<RecordType>
    <fullName>Dodavani_sluzeb</fullName>
    <active>true</active>
    <label>Dodávání služeb</label>
</RecordType>