objects/Ucast__c/recordTypes/Grantys.recordType-meta.xml
<RecordType>
    <fullName>Grantys</fullName>
    <active>true</active>
    <label>Grantys</label>
</RecordType>