objects/Ucast__c/recordTypes/Hodnotici_komise.recordType-meta.xml
<RecordType>
    <fullName>Hodnotici_komise</fullName>
    <active>true</active>
    <label>Hodnotící komise</label>
</RecordType>