objects/Ucast__c/recordTypes/Jiny.recordType-meta.xml
<RecordType>
    <fullName>Jiny</fullName>
    <active>true</active>
    <label>Jiný</label>
</RecordType>