objects/Ucast__c/recordTypes/Nabidka_sluzeb.recordType-meta.xml
<RecordType>
    <fullName>Nabidka_sluzeb</fullName>
    <active>true</active>
    <label>Nabídka služeb</label>
</RecordType>