objects/Ucast__c/recordTypes/Nefinancni_partnerstvi.recordType-meta.xml
<RecordType>
    <fullName>Nefinancni_partnerstvi</fullName>
    <active>true</active>
    <label>Nefinanční partnerství</label>
</RecordType>