objects/Ucast__c/recordTypes/Obchod_OZ.recordType-meta.xml
<RecordType>
    <fullName>Obchod_OZ</fullName>
    <active>true</active>
    <label>Pronájmy v OZ</label>
</RecordType>