objects/Ucast__c/recordTypes/Odber_sluzeb.recordType-meta.xml
<RecordType>
    <fullName>Odber_sluzeb</fullName>
    <active>true</active>
    <label>Odběr služeb</label>
</RecordType>