objects/Ucast__c/recordTypes/P_ihl_en_projekt_AdAw.recordType-meta.xml
<RecordType>
    <fullName>P_ihl_en_projekt_AdAw</fullName>
    <active>true</active>
    <label>Přihlášený projekt AdAw</label>
</RecordType>