objects/Ucast__c/recordTypes/Panelista.recordType-meta.xml
<RecordType>
    <fullName>Panelista</fullName>
    <active>true</active>
    <label>Panelista</label>
</RecordType>