objects/Ucast__c/recordTypes/Poradenstvi_ZP.recordType-meta.xml
<RecordType>
    <fullName>Poradenstvi_ZP</fullName>
    <active>true</active>
    <label>Poradenství ŽP</label>
</RecordType>