objects/Ucast__c/recordTypes/Poskytovani_sluzeb.recordType-meta.xml
<RecordType>
    <fullName>Poskytovani_sluzeb</fullName>
    <active>true</active>
    <label>Poskytování dalších služeb</label>
</RecordType>