objects/Ucast__c/recordTypes/Prijem_grantu.recordType-meta.xml
<RecordType>
    <fullName>Prijem_grantu</fullName>
    <active>true</active>
    <label>Příjem grantu</label>
</RecordType>