objects/Ucast__c/recordTypes/Programy_pro_koly_OZ.recordType-meta.xml
<RecordType>
    <fullName>Programy_pro_koly_OZ</fullName>
    <active>true</active>
    <label>Programy pro školy OZ</label>
</RecordType>