objects/Ucast__c/recordTypes/Programy_v_OZ.recordType-meta.xml
<RecordType>
    <fullName>Programy_v_OZ</fullName>
    <active>true</active>
    <description>Firmy a jiné skupiny</description>
    <label>Programy na objednávku OZ</label>
</RecordType>