objects/Ucast__c/recordTypes/Smlouva_o_partnerstv.recordType-meta.xml
<RecordType>
    <fullName>Smlouva_o_partnerstv</fullName>
    <active>false</active>
    <label>Smlouva o partnerství</label>
</RecordType>