objects/Ucast__c/recordTypes/Smlouva_o_spolupr_ci.recordType-meta.xml
<RecordType>
    <fullName>Smlouva_o_spolupr_ci</fullName>
    <active>true</active>
    <label>Smlouva o spolupráci</label>
</RecordType>