objects/Ucast__c/recordTypes/Ucastnik.recordType-meta.xml
<RecordType>
    <fullName>Ucastnik</fullName>
    <active>true</active>
    <label>Účastník</label>
</RecordType>