objects/Ucast__c/recordTypes/zadatel_o_AS.recordType-meta.xml
<RecordType>
    <fullName>zadatel_o_AS</fullName>
    <active>true</active>
    <label>Žadatel o AS</label>
</RecordType>