objects/Ucast__c/recordTypes/Zadatel_o_grant.recordType-meta.xml
<RecordType>
    <fullName>Zadatel_o_grant</fullName>
    <active>true</active>
    <label>Žadatel o grant</label>
</RecordType>