objects/Ucast__c/recordTypes/Zajem.recordType-meta.xml
<RecordType>
    <fullName>Zajem</fullName>
    <active>true</active>
    <label>Pouze zájem</label>
</RecordType>