objects/Ucast__c/validationRules/Typ_objektu_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Typ_objektu_required</fullName>
    <active>false</active>
    <errorConditionFormula>$RecordType.DeveloperName == &quot;Certifikace&quot;
&amp;&amp;
TEXT(Typ_objektu__c)  == &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Typ_objektu__c</errorDisplayField>
    <errorMessage>Typ objektu musí být vyplněn.</errorMessage>
</ValidationRule>