objects/Ucast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Akce__c</columns>
    <columns>Ucet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny účasti</label>
    <language>en_US</language>
</ListView>