objects/Ucast__c/listViews/nastavenipresence.listView-meta.xml
<ListView>
    <fullName>nastavenipresence</fullName>
    <columns>Akce__c</columns>
    <columns>Primarni_kontakt__c</columns>
    <columns>Uroven_spoluprace__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Akce__c</field>
        <operation>contains</operation>
        <value>vernisáž</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ucast__c.Darcovstvi</value>
    </filters>
    <label>Nastavení presence</label>
    <language>cs</language>
</ListView>